load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_library")
load("@pypi//:requirements.bzl", "entry_point", "requirement")

package(default_visibility = ["//visibility:public"])

# export default pyproject.toml config
filegroup(
    name = "pyproject",
    srcs = ["pyproject.toml"],
)

# This rule adds a convenient way to update the requirements.txt
# lockfile based on the requirements.in.
# Note that this rules will be used to distribute package with bazel.
compile_pip_requirements(
    name = "pypi",
    extra_args = ["--allow-unsafe"],  # We need to allow unsafe to lock pip version
    requirements_in = "//requirements:pypi.txt",
    requirements_txt = "//requirements:bazel-pypi.lock.txt",
    visibility = ["//visibility:__pkg__"],
)

[
    alias(
        name = tool,
        actual = entry_point(tool),
    )
    for tool in [
        "black",
        "isort",
        "ruff",
    ]
]

alias(
    name = "flake8",
    actual = "//rules/py:flake8",
)

alias(
    name = "buildozer",
    actual = "@com_github_bazelbuild_buildtools//buildozer",
)

buildifier(
    name = "buildfmt",
    exclude_patterns = ["./tools/gen_python_packages/**/*"],
)

buildifier_test(
    name = "buildcheck",
    srcs = glob([
        "**/*.bzl",
        "**/*.bazel",
        "monitoring/**/*/BUILD",
    ]),
)

alias(
    name = "pyright",
    actual = "@npm//:node_modules/pyright/index.js",
)
