[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bentoml-plugins-arize"
description = "BentoML Monitoring Arize Plugin"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
keywords = ["MLOps", "AI", "BentoML", "Model Serving", "Model Deployment"]
authors = [{ name = "BentoML Team", email = "contact@bentoml.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

# NOTE: Make sure to add corresponding dependencies for given components here.
dependencies = ["bentoml>1.0.8", "arize>=5.2.0"]

# NOTE: If requires additional dependencies for specific components, add them here.
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-xdist"]

[project.urls]
Homepage = "https://github.com/bentoml/bentoml_plugins/tree/main/monitoring/bentoml-plugins-arize"

[tool.hatch.version]
path = "src/bentoml_plugins/arize/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bentoml_plugins"]
exclude = ["src/bentoml_plugins/arize/BUILD"]

[tool.pyright]
pythonVersion = "3.11"
