load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["pytest.py.tmpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "py_pytest_main",
    srcs = ["py_pytest_main.bzl"],
    visibility = ["//bazel:__subpackages__"],
    deps = ["@rules_python//python:defs"],
)
