load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["pytest.py.tmpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "py_pytest_main",
    srcs = ["py_pytest_main.bzl"],
    visibility = ["//rules:__subpackages__"],
    deps = ["@rules_python//python:defs"],
)

bzl_library(
    name = "packaging",
    srcs = ["packaging.bzl"],
    visibility = ["//rules:__subpackages__"],
)
