[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.__project }}"
description = "{{ cookiecutter.project_description }}"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
keywords = ["MLOps", "AI", "BentoML", "Model Serving", "Model Deployment"]
authors = [{ name = "BentoML Team", email = "contact@bentoml.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

# NOTE: Make sure to add corresponding dependencies for given components here.
dependencies = ["bentoml>={{ cookiecutter.__bentoml_version }}"]

# NOTE: If requires additional dependencies for specific components, add them here.
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-xdist"]

[project.urls]
{% if cookiecutter.__parent_dir is not none %}
Homepage = "https://github.com/bentoml/bentoml_plugins/tree/main/{{ cookiecutter.__parent_dir }}/{{ cookiecutter.__project }}"
{% else %}
Homepage = "https://github.com/bentoml/bentoml_plugins/tree/main/{{ cookiecutter.__project }}"
{% endif %}

[tool.hatch.version]
path = "src/bentoml_plugins/{{ cookiecutter.__provider }}/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bentoml_plugins"]
exclude = ["src/bentoml_plugins/{{ cookiecutter.__provider }}/BUILD"]
